--- a/static/styles.css
+++ b/static/styles.css
@@ -1,10 +1,7 @@
 :root {
-    --font: "Raleway", sans-serif;
-    --purple: #5C5470;
-    --black: #222831;
-    --purpleBlack: #7d768d;
-    --lightPurple: #B9B4C7;
-    --white: #ffffff;
+    --font: "Helvetica Neue", Arial, sans-serif;
+    --primary-color: #333;
+    --secondary-color: #666;
 }
 
 * {
@@ -19,7 +16,7 @@ body {
     font-family: var(--font);
     font-size: 1.6rem;
     margin: 0;
-    padding: 0;
+    color: var(--primary-color);
 }
 
 p {
@@ -33,67 +30,77 @@ p {
     width: 90%;
 }
 
-h1 {
-    color: var(--purple);
-    font-size: 3rem;
-    margin-bottom: 2rem;
+.results {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
 }
 
-h2 {
-    color: var(--black);
-    font-size: 2rem;
-    margin-top: 3rem;
+/* Estilos para la tabla */
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
 }
 
+.table th,
+.table td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: center;
+}
+
+.table th {
+    background-color: #f2f2f2;
+}
+
+
+.result_sem h2 {
+    margin-bottom: 10px;
+}
+
+.result_sem ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.result_sem ul li {
+    margin-bottom: 5px;
+}
+
+/* Estilos para el botón de enviar */
 button {
-    background-color: var(--purple);
-    color: var(--white);
+    margin-bottom: 2rem;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
     border: none;
-    padding: 1rem 2rem;
-    font-size: 1.6rem;
+    border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
-button:hover {
-    background-color: var(--purpleBlack);
+button[type="submit"]:hover {
+    background-color: #0056b3;
 }
 
+/* Estilos para el textarea */
 textarea {
     width: 100%;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border: 1px solid var(--lightPurple);
-    border-radius: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
     resize: vertical;
 }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 2rem;
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
 }
 
-th, td {
-    padding: 1rem;
-    text-align: center;
-    border: 1px solid var(--lightPurple);
+h2 {
+    font-size: 2rem;
+    margin-bottom: 15px;
 }
-
-th {
-    background-color: var(--purpleBlack);
-    color: var(--white);
-}
-
-tbody tr:nth-child(even) {
-    background-color: var(--lightPurple);
-}
-
-ul {
-    list-style-type: none;
-    margin-top: 2rem;
-}
-
-ul li {
-    margin-bottom: 1rem;
-}
-
